--- a/MyWebAPI/Web.config
+++ b/MyWebAPI/Web.config
@@ -13,7 +13,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="IsSynPath" value="E:\日志操作"/>
+    <add key="IsSynPath" value="E:\日志操作" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -43,11 +43,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -66,7 +66,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="MyWebEntities" connectionString="metadata=res://*/myMall.csdl|res://*/myMall.ssdl|res://*/myMall.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MyWeb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MyWebEntities" connectionString="metadata=res://*/MyWebEntities.csdl|res://*/MyWebEntities.ssdl|res://*/MyWebEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NST;initial catalog=MyWeb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
